Added server validation and optimization
